fixing the tooltip triangle for #571
It's fixed on
http://localhost:8888/towtruck/tests/?name=func_notifications.js but
looks wrong on the TowTruck site.  I think it's a Bootstrap thing...

--- a/towtruck/towtruck.less
+++ b/towtruck/towtruck.less
@@ -726,13 +726,14 @@ input.towtruck-upload-avatar {
 
   .towtruck-person-tooltip-arrow-r {
     position:absolute;
-    left:42px;
+    left:47px;
   	width: 0;
   	height: 0;
   	border-top: 4px solid transparent;
   	border-bottom: 4px solid transparent;
   	border-left: 4px solid rgba(0,0,0,0.9);
   	line-height:20px;
+  	opacity:0.9;
   }
 
 }
